// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BottomSheet card Renders BottomSheetCard 1`] = `
<Memo(BottomSheetView)
  style={
    Object {
      "flexDirection": "row",
      "height": 45,
    }
  }
>
  <TouchableOpacity
    onPress={[MockFunction]}
    style={
      Object {
        "borderColor": "#eeeeee",
        "borderWidth": 1,
        "flexDirection": "row",
        "width": 750,
      }
    }
  >
    <Memo(BottomSheetView)
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 16,
            "paddingLeft": 20,
          }
        }
      >
        Test
      </Text>
    </Memo(BottomSheetView)>
  </TouchableOpacity>
</Memo(BottomSheetView)>
`;

exports[`Picking Tab Navigator Renders the Pick TabNavigator 1`] = `
<MaterialTopTabNavigator
  initialRouteName="Pick"
  screenListeners={
    Object {
      "beforeRemove": [Function],
    }
  }
  screenOptions={
    Object {
      "tabBarActiveTintColor": "#0071e9",
      "tabBarInactiveTintColor": "#616161",
      "tabBarItemStyle": Object {
        "borderColor": "#9e9e9e",
        "borderEndWidth": 0.5,
      },
    }
  }
>
  <Screen
    listeners={
      Object {
        "focus": [Function],
      }
    }
    name="QuickPick"
    options={
      Object {
        "tabBarBadge": undefined,
        "title": "[missing \\"en.PICKING.QUICKPICK\\" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      Object {
        "focus": [Function],
      }
    }
    name="Pick"
    options={
      Object {
        "tabBarBadge": undefined,
        "title": "[missing \\"en.PICKING.PICK\\" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      Object {
        "focus": [Function],
      }
    }
    name="SalesFloor"
    options={
      Object {
        "tabBarBadge": undefined,
        "title": "[missing \\"en.ITEM.SALES_FLOOR_QTY\\" translation]",
      }
    }
  >
    [Function]
  </Screen>
</MaterialTopTabNavigator>
`;

exports[`Picking Tab Navigator Renders the Pick TabNavigator with Active Picks 1`] = `
<MaterialTopTabNavigator
  initialRouteName="Pick"
  screenListeners={
    Object {
      "beforeRemove": [Function],
    }
  }
  screenOptions={
    Object {
      "tabBarActiveTintColor": "#0071e9",
      "tabBarInactiveTintColor": "#616161",
      "tabBarItemStyle": Object {
        "borderColor": "#9e9e9e",
        "borderEndWidth": 0.5,
      },
    }
  }
>
  <Screen
    listeners={
      Object {
        "focus": [Function],
      }
    }
    name="QuickPick"
    options={
      Object {
        "tabBarBadge": undefined,
        "title": "[missing \\"en.PICKING.QUICKPICK\\" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      Object {
        "focus": [Function],
      }
    }
    name="Pick"
    options={
      Object {
        "tabBarBadge": [Function],
        "title": "[missing \\"en.PICKING.PICK\\" translation]",
      }
    }
  >
    [Function]
  </Screen>
  <Screen
    listeners={
      Object {
        "focus": [Function],
      }
    }
    name="SalesFloor"
    options={
      Object {
        "tabBarBadge": undefined,
        "title": "[missing \\"en.ITEM.SALES_FLOOR_QTY\\" translation]",
      }
    }
  >
    [Function]
  </Screen>
</MaterialTopTabNavigator>
`;
